milestone-3( added button functionality )

--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
 .carousel-wrapper .carousel-image img {
   /* display: none; */
-  width: 100%;
-}
-
-.carousel-image {
   height: 100vh;
 }
 
-.carousel-wrapper .carousel-image img.active {
+/* .carousel-wrapper .carousel-image img.active {
   display: block;
-}
+} */
